--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,4 +1,5 @@
 .single_post_gallery {
+   margin-bottom: 15px;
    &--item {
       margin-top: 1em;
    }
